--- a/src/aodi/css/index.css
+++ b/src/aodi/css/index.css
@@ -1512,7 +1512,7 @@ body { background-color: #dbd9c3; font-family: "Microsoft YaHei"; }
 
 img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; }
 
-.video_exist { width: 1.6rem; height: 1.6rem; width: .8rem; height: .8rem; position: absolute; right: .4rem; top: .4rem; z-index: 100; background: url(../images/normalmusic.png) no-repeat; -webkit-background-size: .8rem .8rem; background-size: .8rem .8rem; }
+.video_exist { width: 1.6rem; height: 1.6rem; width: .8rem; height: .8rem; position: absolute; right: .4rem; top: .4rem; z-index: 100; background: url(http://p28cve2yr.bkt.clouddn.com/normalmusic.png) no-repeat; -webkit-background-size: .8rem .8rem; background-size: .8rem .8rem; }
 
 .video_exist2 { display: none; }
 
@@ -1520,7 +1520,7 @@ img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -
 
 .mod-orient-layer__content { position: absolute; width: 100%; top: 45%; margin-top: -75px; text-align: center; }
 
-.mod-orient-layer__icon-orient { display: inline-block; width: 67px; height: 109px; background-image: url(../images/phone.png); -webkit-transform: rotate(90deg); -ms-transform: rotate(90deg); transform: rotate(90deg); -webkit-animation: rotation infinite 1.5s ease-in-out; animation: rotation infinite 1.5s ease-in-out; -webkit-background-size: 67px 67px; background-size: 67px; }
+.mod-orient-layer__icon-orient { display: inline-block; width: 67px; height: 109px; background-image: url(http://p28cve2yr.bkt.clouddn.com/phone.png); -webkit-transform: rotate(90deg); -ms-transform: rotate(90deg); transform: rotate(90deg); -webkit-animation: rotation infinite 1.5s ease-in-out; animation: rotation infinite 1.5s ease-in-out; -webkit-background-size: 67px 67px; background-size: 67px; }
 
 .mod-orient-layer__desc { margin-top: 20px; font-size: 15px; color: #fff; }
 
@@ -1550,7 +1550,7 @@ img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -
 
 .page1 { display: block; opacity: 0; }
 
-.page1 .page1-00 { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-image: url(../images/02_bg.jpg); background-repeat: no-repeat; -webkit-background-size: auto 130%; background-size: auto 130%; }
+.page1 .page1-00 { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-image: url(http://p28cve2yr.bkt.clouddn.com/02_bg.jpg); background-repeat: no-repeat; -webkit-background-size: auto 130%; background-size: auto 130%; }
 
 .page1 .page1-001 { position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: auto; }
 
@@ -1560,7 +1560,7 @@ img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -
 
 .page1 .page1-04 { position: absolute; top: 40.5%; left: 10.3%; width: 82.8%; }
 
-.page1 .page1-004 { position: absolute; top: 0; left: 5%; width: 90%; opacity: .4; }
+.page1 .page1-004 { position: absolute; top: -2%; left: 7%; width: 86%; opacity: .4; }
 
 .page1 .page1-03 { display: none; position: absolute; bottom: 8.1%; left: 50%; width: 15.2%; margin-left: -7.6%; }
 
