--- a/src/aodi/scss/index.scss
+++ b/src/aodi/scss/index.scss
@@ -21,7 +21,8 @@ img{
 	right: .4rem;
 	top: .4rem;
 	z-index: 100;
-	background: url(../images/normalmusic.png) no-repeat;
+	// background: url(../images/normalmusic.png) no-repeat;
+	background: url(http://p28cve2yr.bkt.clouddn.com/normalmusic.png) no-repeat;
 	background-size: .8rem .8rem;
 }
 .video_exist2{
@@ -63,7 +64,8 @@ img{
     display: inline-block;
     width: 67px;
     height: 109px;
-    background-image: url(../images/phone.png);
+    // background-image: url(../images/phone.png);
+    background-image: url(http://p28cve2yr.bkt.clouddn.com/phone.png);
     transform: rotate(90deg);
     animation: rotation infinite 1.5s ease-in-out;
     background-size: 67px
@@ -168,7 +170,8 @@ img{
 		left: 0;
 		width: 100%;
 		height: 100%;
-		background-image: url(../images/02_bg.jpg);
+		// background-image: url(../images/02_bg.jpg);
+		background-image: url(http://p28cve2yr.bkt.clouddn.com/02_bg.jpg);
 		background-repeat: no-repeat;
 		// background-size: auto 100%;
 		background-size: auto 130%;
@@ -204,9 +207,9 @@ img{
 	}
 	.page1-004{
 		position: absolute;
-		top: 0;
-		left: 5%;
-		width: 90%;
+		top: -2%;
+		left: 7%;
+		width: 86%;
 		opacity: .4;
 	}
 	.page1-03{
