--- a/src/aodi/css/index.css
+++ b/src/aodi/css/index.css
@@ -1560,7 +1560,7 @@ img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -
 
 .page1 .page1-04 { position: absolute; top: 40.5%; left: 10.3%; width: 82.8%; }
 
-.page1 .page1-004 { position: absolute; top: -2%; left: 7%; width: 86%; opacity: .4; }
+.page1 .page1-004 { position: absolute; top: 50%; left: 7%; width: 86%; -webkit-transform: translate3d(0, -60%, 0); transform: translate3d(0, -60%, 0); opacity: .4; }
 
 .page1 .page1-03 { display: none; position: absolute; bottom: 8.1%; left: 50%; width: 15.2%; margin-left: -7.6%; }
 
@@ -1618,7 +1618,7 @@ img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -
 
 .page4 { display: block; opacity: 0; }
 
-.page4 .page4-02 { position: absolute; top: 38.6%; left: 100%; width: 68.9%; }
+.page4 .page4-02 { position: absolute; top: 30%; left: 100%; width: 68.9%; }
 
 .page4 .page4-02 .car { position: absolute; top: 0; left: 0; width: 100%; opacity: 0; }
 
