--- a/src/aodi/scss/index.scss
+++ b/src/aodi/scss/index.scss
@@ -207,9 +207,11 @@ img{
 	}
 	.page1-004{
 		position: absolute;
-		top: -2%;
+		// top: -2%;
+		top: 50%;
 		left: 7%;
 		width: 86%;
+		transform: translate3d(0,-60%,0);
 		opacity: .4;
 	}
 	.page1-03{
@@ -314,6 +316,7 @@ img{
 		width: 100%;
 		height: 100%;
 		overflow: auto;
+		// transform-origin: 0 0;
 		img{
 			max-width: none;
 			width: auto;
@@ -383,7 +386,8 @@ img{
 		position: absolute;
 		// top: 42.6%;
 		// left: 68%;
-		top: 38.6%;
+		// top: 38.6%;
+		top: 30%;
 		left: 100%;
 		width: 68.9%;
 		.car{
