--- a/src/aodi/css/index.css
+++ b/src/aodi/css/index.css
@@ -1512,7 +1512,7 @@ body { background-color: #dbd9c3; font-family: "Microsoft YaHei"; }
 
 img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; }
 
-.video_exist { width: 1.6rem; height: 1.6rem; width: .8rem; height: .8rem; position: absolute; right: .4rem; top: .4rem; z-index: 100; background: url(http://p28cve2yr.bkt.clouddn.com/normalmusic.png) no-repeat; -webkit-background-size: .8rem .8rem; background-size: .8rem .8rem; }
+.video_exist { width: 1.6rem; height: 1.6rem; width: .8rem; height: .8rem; position: absolute; right: .4rem; top: .4rem; z-index: 100; background: url(../images/normalmusic.png) no-repeat; -webkit-background-size: .8rem .8rem; background-size: .8rem .8rem; }
 
 .video_exist2 { display: none; }
 
@@ -1538,15 +1538,15 @@ img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -
 
 .page0 { display: block; }
 
-.page0 .page0-02 { position: absolute; top: 0%; left: 0%; width: 100%; }
+.page0 .page0-02 { position: absolute; top: -12%; left: 0%; width: 100%; }
 
-.page0 .page0-03 { position: absolute; top: 0%; left: 0%; width: 100%; opacity: 0; }
+.page0 .page0-03 { position: absolute; top: -12%; left: 0%; width: 100%; opacity: 0; }
 
 .page0 .page0-04 { position: absolute; bottom: -8%; left: 0%; width: 100%; opacity: 0; }
 
-.page0 .page0-06 { position: absolute; top: 0%; left: 0%; width: 100%; opacity: 0; }
+.page0 .page0-06 { position: absolute; top: -12%; left: 0%; width: 100%; opacity: 0; }
 
-.page0 .page0-07 { position: absolute; top: 25.5%; left: 50%; margin-left: -13.6%; width: 27.2%; opacity: 0; }
+.page0 .page0-07 { position: absolute; top: 17.5%; left: 50%; margin-left: -13.6%; width: 27.2%; opacity: 0; }
 
 .page1 { display: block; opacity: 0; }
 
@@ -1598,7 +1598,7 @@ img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -
 
 .page2 .page2-001 { position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: auto; }
 
-.page2 .page2-001 img { max-width: none; width: auto; height: 100%; -webkit-transform: scale(1.1); -ms-transform: scale(1.1); transform: scale(1.1); -webkit-transform-origin: 0 50%; -ms-transform-origin: 0 50%; transform-origin: 0 50%; }
+.page2 .page2-001 img { max-width: none; width: auto; height: 100%; -webkit-transform: scale(1.2); -ms-transform: scale(1.2); transform: scale(1.2); -webkit-transform-origin: 0 0; -ms-transform-origin: 0 0; transform-origin: 0 0; }
 
 .page2 .page2-002 { position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; }
 
@@ -1606,17 +1606,19 @@ img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -
 
 .page2 .page2-02 { position: absolute; top: 11.6%; left: 50%; width: 32.6%; margin-left: -16.3%; }
 
-.page3 { opacity: 0; display: block; }
+.page3 { display: block; opacity: 0; }
 
 .page3 .page3-01 { position: relative; }
 
-.page3 .page3-02 { position: absolute; top: 38.9%; right: 0%; width: 52%; }
+.page3 .page3-02 { position: absolute; top: 34.9%; right: 0%; width: 52%; }
 
 .page3 .page3-02 .page3-03 { position: absolute; top: 22%; left: 6%; width: 43.8%; -webkit-animation: carLight 6s linear infinite forwards; animation: carLight 6s linear infinite forwards; }
 
 .page3 .page3-04 { position: absolute; top: 16.6%; left: 50%; width: 38.7%; margin-left: -19.35%; }
 
-.page4 { display: block; opacity: 0; }
+.page4 { display: block; z-index: 3; }
+
+.page4 .page4-01 img { -webkit-transform: scale(1.3); -ms-transform: scale(1.3); transform: scale(1.3); }
 
 .page4 .page4-02 { position: absolute; top: 30%; left: 100%; width: 68.9%; }
 
