奥迪优化五-2

--- a/src/aodi/scss/index.scss
+++ b/src/aodi/scss/index.scss
@@ -388,8 +388,8 @@ img{
 }
 .page4{
 	display: block;
-	// opacity: 0;
-	z-index: 3;
+	opacity: 0;
+	// z-index: 3;
 	.page4-01{
 		img{
 			transform: scale(1.3);
