--- a/src/aodi/css/index.css
+++ b/src/aodi/css/index.css
@@ -1616,7 +1616,7 @@ img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -
 
 .page3 .page3-04 { position: absolute; top: 16.6%; left: 50%; width: 38.7%; margin-left: -19.35%; }
 
-.page4 { display: block; z-index: 3; }
+.page4 { display: block; opacity: 0; }
 
 .page4 .page4-01 img { -webkit-transform: scale(1.3); -ms-transform: scale(1.3); transform: scale(1.3); }
 
