--- a/src/wangfuji/css/index.css
+++ b/src/wangfuji/css/index.css
@@ -1563,21 +1563,29 @@ img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -
 
 .loadingWrap .page1 { position: fixed; top: 0; left: 0; width: 100%; height: 100%; -webkit-background-size: 100% 100%; background-size: 100% 100%; background-position: center; overflow-x: hidden; overflow: hidden; }
 
-.loadingWrap .page1 .page1-1 { display: block; margin: 0 auto; width: 33%; }
+.loadingWrap .page1 .page1-1 { display: block; margin: 0 auto; width: 49.8%; }
 
-.loadingWrap .page1 .links .link { display: block; -webkit-transform: translateX(-100%); -ms-transform: translateX(-100%); transform: translateX(-100%); opacity: 0; -webkit-transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1); -o-transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1); transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1); -webkit-transition: -webkit-transform 0.45s cubic-bezier(0.4, 0, 0.2, 1); transition: -webkit-transform 0.45s cubic-bezier(0.4, 0, 0.2, 1); -o-transition: transform 0.45s cubic-bezier(0.4, 0, 0.2, 1); transition: transform 0.45s cubic-bezier(0.4, 0, 0.2, 1); transition: transform 0.45s cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 0.45s cubic-bezier(0.4, 0, 0.2, 1); }
+.loadingWrap .page1 .links .link { display: block; opacity: 0; -webkit-transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1); -o-transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1); transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1); -webkit-transition: -webkit-transform 0.8s cubic-bezier(0.4, 0, 0.2, 1); transition: -webkit-transform 0.8s cubic-bezier(0.4, 0, 0.2, 1); -o-transition: transform 0.8s cubic-bezier(0.4, 0, 0.2, 1); transition: transform 0.8s cubic-bezier(0.4, 0, 0.2, 1); transition: transform 0.8s cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 0.8s cubic-bezier(0.4, 0, 0.2, 1); }
 
-.loadingWrap .page1 .links .link.link2 { -webkit-transform: translateX(100%); -ms-transform: translateX(100%); transform: translateX(100%); }
+.loadingWrap .page1 .links .link.link1 { -webkit-transform: translateY(-1000%); -ms-transform: translateY(-1000%); transform: translateY(-1000%); }
+
+.loadingWrap .page1 .links .link.link2 { -webkit-transform: translateX(-300%); -ms-transform: translateX(-300%); transform: translateX(-300%); }
+
+.loadingWrap .page1 .links .link.link3 { -webkit-transform: translateX(300%); -ms-transform: translateX(300%); transform: translateX(300%); }
 
 .loadingWrap .page1 .links .link.enter { -webkit-transform: translateX(0); -ms-transform: translateX(0); transform: translateX(0); opacity: 1; }
 
 .loadingWrap .page1 .links .link .item { display: block; margin: 0 auto; }
 
-.loadingWrap .page1 .links .link .item1 { width: 7.2rem; }
+.loadingWrap .page1 .links .link1 { padding: 0 11.4%; margin-top: 2rem; margin-bottom: 2rem; }
 
-.loadingWrap .page1 .links .link .item2 { width: 7.2rem; }
+.loadingWrap .page1 .links .group { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; padding: 0 11.4%; }
 
-.loadingWrap .page1 .links .link .item3 { width: 6.4rem; }
+.loadingWrap .page1 .links .group .link { -webkit-box-flex: 1; -webkit-flex: 1; -ms-flex: 1; flex: 1; }
+
+.loadingWrap .page1 .links .group .link2 { margin-right: 0.32rem; }
+
+.loadingWrap .page1 .links .group .link3 { margin-left: 0.32rem; }
 
 .loadingWrap .page1 .links .link:nth-child(1) { -webkit-transition-delay: .14s; -o-transition-delay: .14s; transition-delay: .14s; }
 
@@ -2113,11 +2121,17 @@ img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -
 
 .payWrap .wrap .pay .input-box { position: relative; width: 10.68rem; height: 2.44rem; margin: 1.2rem auto 0; background-image: url(../images/textbox.png); -webkit-background-size: 100% 100%; background-size: 100%; background-repeat: no-repeat; background-position: center; }
 
+.payWrap .wrap .pay .input-box.input-box1 { background-image: url(../images/textbox4.png); }
+
+.payWrap .wrap .pay .input-box.input-box1 input { padding-right: 3rem; }
+
 .payWrap .wrap .pay .input-box input { width: 100%; height: 100%; padding-left: 4rem; padding-right: 2rem; overflow: hidden; -o-text-overflow: ellipsis; text-overflow: ellipsis; white-space: nowrap; border: none; background: none; font-size: 0.56rem; color: #3f2c01; }
 
 .payWrap .wrap .pay .input-box .tag { position: absolute; top: 50%; left: 0.6rem; -webkit-transform: translate(0, -50%); -ms-transform: translate(0, -50%); transform: translate(0, -50%); font-size: 0.56rem; color: #3f2c01; }
 
-.payWrap .wrap .pay .input-box .polygon { position: absolute; top: 50%; right: 1.12rem; -webkit-transform: translate(0, -50%); -ms-transform: translate(0, -50%); transform: translate(0, -50%); width: 0.36rem; height: 0.4rem; background-image: url(../images/polygon.png); -webkit-background-size: 100% 100%; background-size: 100%; background-repeat: no-repeat; background-position: center; }
+.payWrap .wrap .pay .input-box .polygon { position: absolute; top: 50%; right: 3.2rem; -webkit-transform: translate(0, -50%); -ms-transform: translate(0, -50%); transform: translate(0, -50%); width: 0.36rem; height: 0.4rem; background-image: url(../images/polygon.png); -webkit-background-size: 100% 100%; background-size: 100%; background-repeat: no-repeat; background-position: center; }
+
+.payWrap .wrap .pay .input-box .add { position: absolute; top: 0; right: 0; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; width: 2.8rem; height: 100%; font-size: 0.56rem; color: #3f2c01; }
 
 .payWrap .wrap .pay .btns { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -webkit-justify-content: space-between; -ms-flex-pack: justify; justify-content: space-between; width: 10.68rem; margin: 1.6rem auto 0; }
 
@@ -2330,8 +2344,3 @@ img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -
 .productlistWrap .page1 .goodWrap .goodlist .product .item .detail { display: block; display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 2; overflow: hidden; }
 
 .productlistWrap .page1 .goodWrap .goodlist .product .item .price { color: #d9002a; }
-
-@media only screen and (min-device-height: 700px) { .loadingWrap .page1 .page1-1 { width: 49.8%; }
-  .loadingWrap .page1 .links .link .item1 { width: 8.8rem; }
-  .loadingWrap .page1 .links .link .item2 { width: 8.8rem; }
-  .loadingWrap .page1 .links .link .item3 { width: 7.2rem; } }
