--- a/src/wangfuji/scss/index.scss
+++ b/src/wangfuji/scss/index.scss
@@ -205,18 +205,23 @@ img{
 		.page1-1{
 			display: block;
 			margin: 0 auto;
-			// width: 49.8%;
-			width: 33%;
+			width: 49.8%;
+			// width: 33%;
 		}
 		.links{
 			.link{
 				display: block;
-				transform: translateX(-100%);
 				opacity: 0;
 				transition: opacity .3s cubic-bezier(.4, 0, .2, 1);
-				transition: transform .45s cubic-bezier(.4, 0, .2, 1);
+				transition: transform .8s cubic-bezier(.4, 0, .2, 1);
+				&.link1{
+					transform: translateY(-1000%);
+				}
 				&.link2{
-					transform: translateX(100%);
+					transform: translateX(-300%);
+				}
+				&.link3{
+					transform: translateX(300%);
 				}
 				&.enter{
 					transform: translateX(0);
@@ -228,15 +233,33 @@ img{
 				}
 				.item1{
 					// width: 10.32rem /* 258/25 */;
-					width: 7.2rem /* 180/25 */;
+					// width: 7.2rem /* 180/25 */;
 				}
 				.item2{
 					// width: 10.32rem /* 258/25 */;
-					width: 7.2rem /* 180/25 */;
+					// width: 7.2rem /* 180/25 */;
 				}
 				.item3{
 					// width: 8.72rem /* 218/25 */;
-					width: 6.4rem /* 160/25 */;
+					// width: 6.4rem /* 160/25 */;
+				}
+			}
+			.link1{
+				padding: 0 11.4%;
+				margin-top: 2rem /* 50/25 */;
+				margin-bottom: 2rem /* 50/25 */;
+			}
+			.group{
+				display: flex;
+				padding: 0 11.4%;
+				.link{
+					flex: 1;
+				}
+				.link2{
+					margin-right: .32rem /* 8/25 */;
+				}
+				.link3{
+					margin-left: .32rem /* 8/25 */;
 				}
 			}
 			.link:nth-child(1) {
@@ -1652,6 +1675,12 @@ img{
 				background-size: 100%;
 				background-repeat: no-repeat;
 				background-position: center;
+				&.input-box1{
+					background-image: url(../images/textbox4.png);
+					input{
+						padding-right: 3rem /* 75/25 */;
+					}
+				}
 				input{
 					width: 100%;
 					height: 100%;
@@ -1676,7 +1705,7 @@ img{
 				.polygon{
 					position: absolute;
 					top: 50%;
-					right: 1.12rem /* 28/25 */;
+					right: 3.2rem /* 80/25 */;
 					transform: translate(0,-50%);
 					width: .36rem /* 9/25 */;
 					height: .4rem /* 10/25 */;
@@ -1684,6 +1713,18 @@ img{
 					background-size: 100%;
 					background-repeat: no-repeat;
 					background-position: center;
+				}
+				.add{
+					position: absolute;
+					top:0;
+					right: 0;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					width: 2.8rem /* 70/25 */;
+					height: 100%;
+					font-size: .56rem /* 14/25 */;
+					color: #3f2c01;
 				}
 			}
 			.btns{
@@ -2317,29 +2358,29 @@ img{
 	}
 }
 
-@media only screen and (min-device-height: 700px){
-    .loadingWrap{
-		// home
-		.page1{
-			.page1-1{
-				width: 49.8%;
-			}
-			.links{
-				.link{
-					.item1{
-						width: 8.8rem /* 220/25 */;
-					}
-					.item2{
-						width: 8.8rem /* 220/25 */;
-					}
-					.item3{
-						width: 7.2rem /* 180/25 */;
-					}
-				}
-			}
-		}
-	}
-}
+// @media only screen and (min-device-height: 700px){
+//     .loadingWrap{
+// 		// home
+// 		.page1{
+// 			.page1-1{
+// 				width: 49.8%;
+// 			}
+// 			.links{
+// 				.link{
+// 					.item1{
+// 						width: 8.8rem /* 220/25 */;
+// 					}
+// 					.item2{
+// 						width: 8.8rem /* 220/25 */;
+// 					}
+// 					.item3{
+// 						width: 7.2rem /* 180/25 */;
+// 					}
+// 				}
+// 			}
+// 		}
+// 	}
+// }
 // @media only screen and (min-device-height: 730px){
 //     .loadingWrap{
 // 		// home
